comments and README updated

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>Selector Test</title>	
 	</head>
-	<body>
-		<div class="example">
+	<body> <!-- hover on body elements to find their path-->
+		<div class="example"> 
             <p class="foo">foo</p>
             <span id="bar">bye</span>
         </div>
@@ -12,11 +12,11 @@
         	<li class="1">1</li>
         	<li class="2">2</li>
         </ul>
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script><!-- jQuery isrequired for the script to function -->
 		<script type="text/javascript" src="src/selector.js"></script>
 		<script type="text/javascript">
-			findPathOfElements();
+			findPathOfElements(); // call this function to start the script    
 		</script>
-
+.
 	</body>
 </html>
