--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
         	<li class="1">1</li>
         	<li class="2">2</li>
         </ul>
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script><!-- jQuery isrequired for the script to function -->
-		<script type="text/javascript" src="src/selector.js"></script>
-		<script type="text/javascript">
-			findPathOfElements(); // call this function to start the script    
-		</script>
-.
+		<!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>-->
+		<script type="text/javascript" src="src/selector_vanilla.js"></script>
 	</body>
 </html>
